--- a/src/index.html
+++ b/src/index.html
@@ -107,13 +107,13 @@
                     <div class="col-xs-12 col-md-9">
                         <div class="about__short col-md-8">
                             <h4><strong><em>Versión corta</em></strong></h4>
-                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros más) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.
+                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.
                                 <br>
                                 <br>En los desplegables podrás ver algunas de las herramientas y lenguajes que he aprendido a manejar en los últimos 6 meses (enero-julio 2017).</p>
                         </div>
                         <div class="about__short col-md-4">
                             <div class="col-md-12">
-                                <button class="btn skill-btn" data-toggle="collapse" data-target="#skill-set">
+                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#skill-set">
                                     <i class="fa fa-chevron-down"></i>
                                     <span>Skill set</span>
                                 </button>
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn tool-btn" data-toggle="collapse" data-target="#tools">
+                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#tools">
                                     <i class="fa fa-chevron-down"></i>
                                     <span>Tools</span>
                                 </button>
@@ -143,6 +143,36 @@
                                         <li>GitHub</li>
                                         <li>Gulp</li>
                                         <li>Heroku</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
+                                    <i class="fa fa-chevron-down"></i>
+                                    <span>Reconocimientos</span>
+                                </button>
+                                <div id="honors" class="skills-info collapse">
+                                    <ul>
+                                        <li>
+                                            <p>LA MÁS PROACTIVA</p>
+                                            <p><i>feb. 2017</i></p>
+                                        </li>
+                                        <li>
+                                            <p>MENCIÓN ESPECIAL POR INNOVACIÓN TECH</p>                  
+                                            <p><i>abr. 2017</i></p>
+                                        </li>
+                                        <li>
+                                            <p>JEDI MASTER</p>
+                                            <p><i>may. 2017</i></p>
+                                        </li>
+                                        <li>
+                                            <p>BEST SQUAD</p>
+                                            <p><i>may. 2017</i></p>
+                                        </li>
+                                        <li>
+                                            <p>BEST SQUAD</p>
+                                            <p><i>jul. 2017</i></p>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -193,11 +223,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://open.spotify.com/user/12146235067" target="_blank">
-                        <i class="fa fa-spotify"></i>
-                    </a>
-                </li>
-                <li>
                     <a href="https://www.instagram.com/itsandromeda/" target="_blank">
                         <i class="fa fa-instagram"></i>
                     </a>
@@ -205,6 +230,11 @@
                 <li>
                     <a href="https://codepen.io/ItsAndromeda/" target="_blank">
                         <i class="fa fa-codepen"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/anniajflores/" target="_blank">
+                        <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
