--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,8 @@
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
                         <h3>PINTEREST</h3>
-                        <p>Recreación de la plataforma original trayendo datos del API de la misma.</p>
-                        <button class="btn">jQuery, Pinterest API, GULP &amp; SASS</button>
+                        <p>Recreación de la plataforma original (responsive) trayendo datos del API de la misma.</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#pinterest-modal">jQuery, Pinterest API, GULP &amp; SASS</button>
                     </div>
                 </div>
                 <div class="row">
@@ -94,9 +94,9 @@
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
-                        <h3>PORTAFOLIO</h3>
-                        <p>El proceso creativo y de desarrollo de este portafolio, donde hice uso de la mayoría de herramientas aprendidas en Laboratoria.</p>
-                        <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
+                        <h3>THIS IS NEAT</h3>
+                        <p>Réplica de la página original en vista desktop y responsive.</p>
+                        <button class="btn">JavaScript, Bootstrap, HTML5</button>
                     </div>
                 </div>
             </div>
@@ -167,6 +167,61 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="pinterest-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">PINTEREST</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>Cliente</h4>
+                                <p>Laboratoria</p>
+                                <h4>Mi función</h4>
+                                <p>Automatizar las tareas de desarrollo con gulp y trabajar con SASS para generar los estilos.</p>
+                                <h4>Tecnologías</h4>
+                                <ul>
+                                    <li>JavaScript</li>
+                                    <li>jQuery</li>
+                                    <li>Gulp</li>
+                                    <li>SASS</li>
+                                    <li>BEM</li>
+                                    <li>HTML5</li>
+                                    <li>Heroku</li>
+                                    <li>Pinterest API</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <p>Recrear un board específico siguiendo el diseño original.</p>
+                                    <p>Requerimientos:</p>
+                                    <ol>
+                                        <li>SASS, con alguna notación modular(BEM, OCCSS, etc.)</li>
+                                        <li>Gulp</li>
+                                        <li>Componentes</li>
+                                    </ol>
+                                </div>
+                                <div class="col-md-12">
+                                    <h4>PROCESO</h4>
+                                    <h5>01. Organización</h5>
+                                    <p>El proyecto lo realicé con una compañera y utilizamos Trello para mantenernos al tanto de nuestro avance.</p>
+                                    <h5>02. Desarrollo</h5>
+                                    <p>Cada componente tiene un archivo de SCSS por motivos de organización y fácil edición e hice uso de la metodología BEM para estructurar el CSS.</p>
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Pinterest" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://pinterest-laboratoria.herokuapp.com/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section id="about">
             <div class="container-fluid">
                 <h2>SOBRE MÍ</h2>
@@ -175,7 +230,7 @@
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
-                            <i class="fa fa-chevron-down"></i>
+                            <i class="fa fa-chevron-right"></i>
                             <span>Reconocimientos</span>
                         </button>
                         <div id="honors" class="skills-info collapse">
