--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>THIS IS NEAT</h3>
                         <p>Réplica de la página original en vista desktop y responsive.</p>
-                        <button class="btn">JavaScript, Bootstrap, HTML5</button>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#neat-modal">JavaScript, Bootstrap, HTML5</button>
                     </div>
                 </div>
             </div>
@@ -254,6 +254,48 @@
                                 <div class="col-md-12">
                                     <h4>PROCESO</h4>
                                     <p>Investigué sobre HTML y CSS lo suficiente para poder desarrollar una réplica de Trello y darle funcionalidad a los elementos con JavaScript. La réplica que desarrollé te permite agregar listas en el board creado por default. Fue el primer proyecto de maquetado que hice en el bootcamp y recibí un reconocimiento por mi proactividad.</p>
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Trello-Clone" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/Trello-Clone/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="neat-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">THIS IS NEAT</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>Cliente</h4>
+                                <p>Laboratoria</p>
+                                <h4>Mi función</h4>
+                                <p>Recrear la página original utilizando componentes de Bootstrap.</p>
+                                <h4>Tecnologías</h4>
+                                <ul>
+                                    <li>Bootstrap</li>
+                                    <li>JavaScript</li>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <p>Requerimiento: Utilizar componentes de Bootstrap.</p>
+                                </div>
+                                <div class="col-md-12">
+                                    <h4>PROCESO</h4>
+                                    <p>Hice que el posicionamiento de varios elementos cambiara de acuerdo al tamaño de la pantalla con clases de Bootstrap. Utilicé JavaScript para que el contenido de la página suba al momento de cerrar a barra de promoción.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
                                     <a class="modal-btn" href="https://github.com/itsandromeda/Trello-Clone" target="_blank">Código</a>
